Fix article image placeholder width and increase loader visibility animation duration.

--- a/sources/stylesheets/content/_blog-article.scss
+++ b/sources/stylesheets/content/_blog-article.scss
@@ -293,7 +293,7 @@
 
 
 .article-placeholder {
-  max-width: 100%;
+  width: 100%;
   box-sizing: border-box;
   padding: .5em;
 }
